minor fix to the jpetstore.css as a broken stylesheet creates a lot of warnings with the HTMLUnitDriver from selenium.

--- a/frontend-service/src/main/webapp/css/jpetstore.css
+++ b/frontend-service/src/main/webapp/css/jpetstore.css
@@ -172,9 +172,6 @@ body>#Menu {
   height: 9ex;
 }
 
- {
-}
-
 #Search {
   width: 33%;
   height: 9ex;
